@@ -170,7 +170,7 @@ a, a:link,
 }
 
 
-/* pure buttons */
+/* pure forms */
 
 .pure-button {
 	border: 1px solid #ccc;
