@@ -1,17 +1,20 @@
-html { direction: rtl; }
-body { direction: rtl; }
+html, body { direction: rtl; }
 th { text-align: right; }
 
 .comment .title {
 	padding: 10px 19px 12px 0;
 	background: transparent url(../images/all/icon-comment_rtl.png) right center no-repeat !important;
 }
-.comment .new, .by { float: left; }
+.comment .new, .by {
+	float: left;
+}
 .node .picture, .comment .picture {
 	float: left;
 	padding: 0 .5em .5em 0;
 }
-.logoimg { float: right; }
+.logoimg {
+	float: right;
+}
 #top-elements {
 	float: left;
 	text-align: left;
@@ -20,8 +23,12 @@ th { text-align: right; }
 	border-left: none !important;
 	border-right: 1px dashed #ddd;
 }
-#breadcrumb { padding-right: 20px; }
-#forum td.container { background: #cdcdcd url(../images/all/forum-container_rtl.jpg) left top no-repeat !important; }
+#breadcrumb {
+	padding-right: 20px;
+}
+#forum td.container {
+	background: #cdcdcd url(../images/all/forum-container_rtl.jpg) left top no-repeat !important;
+}
 #forum td.container .name a {
 	padding: 10px 40px 10px 0;
 	background: transparent url(../images/all/forum-link_rtl.png) right center no-repeat !important;
@@ -42,15 +49,27 @@ html.js fieldset.collapsible .collapse-processed a {
 }
 
 /* MENU & link STYLES */
-ul li.collapsed { list-style-image: url(../images/all/menu-collapsed_rtl.png) !important; }
+ul li.collapsed {
+	list-style-image: url(../images/all/menu-collapsed_rtl.png) !important;
+}
 ul.links li {
 	border-left: none !important;
 	border-right: 1px solid #d3d3d3;
 }
-.pure-menu-heading { float: right; margin: 0 18px 0 0; }
-.menu-toggle { float: left; margin: 0 0 0 18px; }
-.menu-toggle .bars { right: .5em; }
-.pure-menu-link { text-align: right; }
+.pure-menu-heading {
+	float: right;
+	margin: 0 18px 0 0;
+}
+.menu-toggle {
+	float: left;
+	margin: 0 0 0 18px;
+}
+.menu-toggle .bars {
+	right: .5em;
+}
+.pure-menu-link {
+	text-align: right;
+}
 .pure-menu-children .pure-menu-children {
 	left: auto;
 	right: 100%;
@@ -61,16 +80,26 @@ ul.links li {
 	padding-left: 0;
 	padding-right: .5em;
 }
-.pure-menu-has-children .pure-menu-has-children > .pure-menu-link:after { content: "\25C2"; }
+.pure-menu-has-children .pure-menu-has-children > .pure-menu-link:after {
+	content: "\25C2";
+}
 
 /* ROUNDED CORNERS */
-.rnd .pure-paginator .first { border-radius: 0px 6px 6px 0px; }
-.rnd .pure-paginator .last { border-radius: 6px 0px 0px 6px; }
+.rnd .pure-paginator .first {
+	border-radius: 0px 6px 6px 0px;
+}
+.rnd .pure-paginator .last {
+	border-radius: 6px 0px 0px 6px;
+}
 
 /* BLOCK ICONS */
 
-.bi32 .block-icon { margin: -5px -5px 0 0; }
-.bi48 .block-icon { margin: -15px -18px 0 0; }
+.bi32 .block-icon {
+	margin: -5px -5px 0 0;
+}
+.bi48 .block-icon {
+	margin: -15px -18px 0 0;
+}
 .bi32 .themed-block .title, .bi48 .themed-block .title {
 	text-align: left;
 	padding: 6px 28px 6px 6px;
