@@ -1,5 +1,5 @@
 name = 0 Point
-description = Responsive 0 Point theme is ideal for a wide range of sites. It uses <a href="http://purecss.io/">Yahoo Pure.css</a>, a powerful responsive CSS framework. <br /> <em>Developed by <a href="http://www.radut.net">Dr. Radut</a>.</em>
+description = <b>0 Point responsive theme</b> is ideal for a wide range of sites. It uses <a href="http://purecss.io/">Yahoo Pure.css</a>, a powerful responsive CSS framework. <br /> <em>Developed by <a href="http://www.radut.net">Dr. Radut</a>.</em>
 
 core = 6.x
 engine = phptemplate
